[gd_scene load_steps=23 format=4 uid="uid://3qxj2k7wn5y5"]

[ext_resource type="Texture2D" uid="uid://nf0f8dkhrk5w" path="res://Sprites/fantasy_ [version 2.0]/forest_/forest_.png" id="3_j01aq"]
[ext_resource type="Texture2D" uid="uid://d1esm2c3t2708" path="res://Sprites/fantasy_ [version 2.0]/tundra_/ice_.png" id="5_3xwv7"]
[ext_resource type="Texture2D" uid="uid://dbrigcvgs2leb" path="res://Sprites/fantasy_ [version 2.0]/swamp_/swamp_.png" id="5_j526l"]
[ext_resource type="Resource" uid="uid://drtdco6fmbidy" path="res://Board/Grid.tres" id="7_gurcu"]
[ext_resource type="Script" path="res://Board/GameBoard.gd" id="7_jg22f"]
[ext_resource type="Script" path="res://Board/obstacle.gd" id="7_mlpqg"]
[ext_resource type="PackedScene" uid="uid://nn0f5svx4huo" path="res://Units/unit_path.tscn" id="8_pv6xv"]
[ext_resource type="PackedScene" uid="uid://yhtd33jo11hi" path="res://Units/unit_overlay.tscn" id="9_75io2"]
[ext_resource type="PackedScene" uid="uid://ci3xqjw7fs6q6" path="res://Menu/action_menu.tscn" id="9_xp7j3"]
[ext_resource type="Texture2D" uid="uid://dp04qnya7k2vm" path="res://Sprites/MiniWorldSprites/Miscellaneous/Chests.png" id="10_rst45"]
[ext_resource type="Script" path="res://Board/Terrain.gd" id="11_w33xh"]
[ext_resource type="PackedScene" uid="uid://ctdtnl32pqeat" path="res://Units/BaseUnit.tscn" id="12_ddttq"]
[ext_resource type="Resource" uid="uid://drd011e1sjlsg" path="res://Units/Class_types/Class_type.tres" id="12_g5gwo"]
[ext_resource type="PackedScene" uid="uid://dq0ulft7ykws0" path="res://Units/Enemy_unit.tscn" id="13_u7hvr"]
[ext_resource type="PackedScene" uid="uid://cqmdhxbchwu58" path="res://Board/cursor.tscn" id="13_wgu0w"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y6kdr"]
texture = ExtResource("3_j01aq")
1:1/0 = 0
1:1/0/custom_data_0 = 1
1:1/0/custom_data_2 = true
2:1/0 = 0
2:1/0/custom_data_0 = 1
2:1/0/custom_data_2 = true
3:1/0 = 0
3:1/0/custom_data_0 = 1
3:1/0/custom_data_2 = true
4:1/0 = 0
4:1/0/custom_data_0 = 1
4:1/0/custom_data_2 = true
5:1/0 = 0
5:1/0/custom_data_0 = 1
5:1/0/custom_data_2 = true
6:1/0 = 0
6:1/0/custom_data_0 = 1
6:1/0/custom_data_2 = true
7:1/0 = 0
7:1/0/custom_data_0 = 1
7:1/0/custom_data_2 = true
8:1/0 = 0
8:1/0/custom_data_0 = 1
8:1/0/custom_data_2 = true
9:1/0 = 0
9:1/0/custom_data_0 = 1
9:1/0/custom_data_2 = true
10:1/0 = 0
10:1/0/custom_data_0 = 1
10:1/0/custom_data_2 = true
11:1/0 = 0
11:1/0/custom_data_0 = 1
11:1/0/custom_data_2 = true
16:1/0 = 0
16:1/0/custom_data_0 = 1
17:1/0 = 0
17:1/0/custom_data_0 = 1
18:1/0 = 0
18:1/0/custom_data_0 = 1
19:1/0 = 0
19:1/0/custom_data_0 = 1
20:1/0 = 0
20:1/0/custom_data_0 = 1
1:2/0 = 0
1:2/0/custom_data_0 = 1
1:2/0/custom_data_2 = true
2:2/0 = 0
2:2/0/custom_data_0 = 1
2:2/0/custom_data_2 = true
3:2/0 = 0
3:2/0/custom_data_0 = 1
3:2/0/custom_data_2 = true
4:2/0 = 0
4:2/0/custom_data_0 = 1
4:2/0/custom_data_2 = true
5:2/0 = 0
5:2/0/custom_data_0 = 1
5:2/0/custom_data_2 = true
6:2/0 = 0
6:2/0/custom_data_0 = 1
6:2/0/custom_data_2 = true
7:2/0 = 0
7:2/0/custom_data_0 = 1
7:2/0/custom_data_2 = true
8:2/0 = 0
8:2/0/custom_data_0 = 1
8:2/0/custom_data_2 = true
9:2/0 = 0
9:2/0/custom_data_0 = 1
9:2/0/custom_data_2 = true
10:2/0 = 0
10:2/0/custom_data_0 = 1
10:2/0/custom_data_2 = true
11:2/0 = 0
11:2/0/custom_data_0 = 1
11:2/0/custom_data_2 = true
16:2/0 = 0
16:2/0/custom_data_0 = 1
17:2/0 = 0
17:2/0/custom_data_0 = 1
18:2/0 = 0
18:2/0/custom_data_0 = 1
19:2/0 = 0
19:2/0/custom_data_0 = 1
20:2/0 = 0
20:2/0/custom_data_0 = 1
1:3/0 = 0
1:3/0/custom_data_0 = 1
1:3/0/custom_data_2 = true
2:3/0 = 0
2:3/0/custom_data_0 = 1
2:3/0/custom_data_2 = true
3:3/0 = 0
3:3/0/custom_data_0 = 1
3:3/0/custom_data_2 = true
4:3/0 = 0
4:3/0/custom_data_0 = 1
4:3/0/custom_data_2 = true
5:3/0 = 0
5:3/0/custom_data_0 = 1
5:3/0/custom_data_2 = true
6:3/0 = 0
6:3/0/custom_data_0 = 1
6:3/0/custom_data_2 = true
7:3/0 = 0
7:3/0/custom_data_0 = 1
7:3/0/custom_data_2 = true
8:3/0 = 0
8:3/0/custom_data_0 = 1
8:3/0/custom_data_2 = true
9:3/0 = 0
9:3/0/custom_data_0 = 1
9:3/0/custom_data_2 = true
10:3/0 = 0
10:3/0/custom_data_0 = 1
10:3/0/custom_data_2 = true
11:3/0 = 0
11:3/0/custom_data_0 = 1
11:3/0/custom_data_2 = true
16:3/0 = 0
16:3/0/custom_data_0 = 1
17:3/0 = 0
17:3/0/custom_data_0 = 1
18:3/0 = 0
18:3/0/custom_data_0 = 1
19:3/0 = 0
19:3/0/custom_data_0 = 1
20:3/0 = 0
20:3/0/custom_data_0 = 1
1:4/0 = 0
1:4/0/custom_data_0 = 1
1:4/0/custom_data_2 = true
2:4/0 = 0
2:4/0/custom_data_0 = 1
2:4/0/custom_data_2 = true
3:4/0 = 0
3:4/0/custom_data_0 = 1
3:4/0/custom_data_2 = true
4:4/0 = 0
4:4/0/custom_data_0 = 1
4:4/0/custom_data_2 = true
5:4/0 = 0
5:4/0/custom_data_0 = 1
5:4/0/custom_data_2 = true
6:4/0 = 0
6:4/0/custom_data_0 = 1
6:4/0/custom_data_2 = true
7:4/0 = 0
7:4/0/custom_data_0 = 1
7:4/0/custom_data_2 = true
8:4/0 = 0
8:4/0/custom_data_0 = 1
8:4/0/custom_data_2 = true
9:4/0 = 0
9:4/0/custom_data_0 = 1
9:4/0/custom_data_2 = true
10:4/0 = 0
10:4/0/custom_data_0 = 1
10:4/0/custom_data_2 = true
11:4/0 = 0
11:4/0/custom_data_0 = 1
11:4/0/custom_data_2 = true
1:5/0 = 0
1:5/0/custom_data_0 = 1
1:5/0/custom_data_1 = true
2:5/0 = 0
2:5/0/custom_data_0 = 1
2:5/0/custom_data_1 = true
3:5/0 = 0
3:5/0/custom_data_0 = 1
3:5/0/custom_data_1 = true
4:5/0 = 0
4:5/0/custom_data_0 = 1
4:5/0/custom_data_1 = true
5:5/0 = 0
5:5/0/custom_data_0 = 1
5:5/0/custom_data_1 = true
6:5/0 = 0
6:5/0/custom_data_0 = 1
6:5/0/custom_data_1 = true
7:5/0 = 0
7:5/0/custom_data_0 = 1
7:5/0/custom_data_1 = true
8:5/0 = 0
8:5/0/custom_data_0 = 1
8:5/0/custom_data_1 = true
9:5/0 = 0
9:5/0/custom_data_0 = 1
9:5/0/custom_data_1 = true
10:5/0 = 0
10:5/0/custom_data_0 = 1
10:5/0/custom_data_1 = true
11:5/0 = 0
11:5/0/custom_data_0 = 1
11:5/0/custom_data_1 = true
12:5/0 = 0
12:5/0/custom_data_0 = 1
12:5/0/custom_data_1 = true
13:5/0 = 0
13:5/0/custom_data_0 = 1
13:5/0/custom_data_1 = true
14:5/0 = 0
14:5/0/custom_data_0 = 1
14:5/0/custom_data_1 = true
15:5/0 = 0
15:5/0/custom_data_0 = 1
15:5/0/custom_data_1 = true
16:5/0 = 0
16:5/0/custom_data_0 = 1
16:5/0/custom_data_1 = true
17:5/0 = 0
17:5/0/custom_data_0 = 1
17:5/0/custom_data_1 = true
18:5/0 = 0
18:5/0/custom_data_0 = 1
18:5/0/custom_data_1 = true
19:5/0 = 0
19:5/0/custom_data_0 = 1
19:5/0/custom_data_1 = true
20:5/0 = 0
20:5/0/custom_data_0 = 1
20:5/0/custom_data_1 = true
1:6/0 = 0
1:6/0/custom_data_0 = 1
1:6/0/custom_data_1 = true
2:6/0 = 0
2:6/0/custom_data_0 = 1
2:6/0/custom_data_1 = true
3:6/0 = 0
3:6/0/custom_data_0 = 1
3:6/0/custom_data_1 = true
4:6/0 = 0
4:6/0/custom_data_0 = 1
4:6/0/custom_data_1 = true
5:6/0 = 0
5:6/0/custom_data_0 = 1
5:6/0/custom_data_1 = true
6:6/0 = 0
6:6/0/custom_data_0 = 1
6:6/0/custom_data_1 = true
7:6/0 = 0
7:6/0/custom_data_0 = 1
7:6/0/custom_data_1 = true
8:6/0 = 0
8:6/0/custom_data_0 = 1
8:6/0/custom_data_1 = true
9:6/0 = 0
9:6/0/custom_data_0 = 1
9:6/0/custom_data_1 = true
10:6/0 = 0
10:6/0/custom_data_0 = 1
10:6/0/custom_data_1 = true
11:6/0 = 0
11:6/0/custom_data_0 = 1
11:6/0/custom_data_1 = true
12:6/0 = 0
12:6/0/custom_data_0 = 1
12:6/0/custom_data_1 = true
13:6/0 = 0
13:6/0/custom_data_0 = 1
13:6/0/custom_data_1 = true
14:6/0 = 0
14:6/0/custom_data_0 = 1
14:6/0/custom_data_1 = true
15:6/0 = 0
15:6/0/custom_data_0 = 1
15:6/0/custom_data_1 = true
16:6/0 = 0
16:6/0/custom_data_0 = 1
16:6/0/custom_data_1 = true
17:6/0 = 0
17:6/0/custom_data_0 = 1
17:6/0/custom_data_1 = true
18:6/0 = 0
18:6/0/custom_data_0 = 1
18:6/0/custom_data_1 = true
19:6/0 = 0
19:6/0/custom_data_0 = 1
19:6/0/custom_data_1 = true
20:6/0 = 0
20:6/0/custom_data_0 = 1
20:6/0/custom_data_1 = true
1:7/0 = 0
1:7/0/custom_data_0 = 1
1:7/0/custom_data_1 = true
2:7/0 = 0
2:7/0/custom_data_0 = 1
2:7/0/custom_data_1 = true
3:7/0 = 0
3:7/0/custom_data_0 = 1
3:7/0/custom_data_1 = true
4:7/0 = 0
4:7/0/custom_data_0 = 5
4:7/0/custom_data_1 = true
6:7/0 = 0
6:7/0/custom_data_0 = 1
6:7/0/custom_data_1 = true
7:7/0 = 0
7:7/0/custom_data_0 = 1
7:7/0/custom_data_1 = true
8:7/0 = 0
8:7/0/custom_data_0 = 1
8:7/0/custom_data_1 = true
9:7/0 = 0
9:7/0/custom_data_0 = 1
9:7/0/custom_data_1 = true
11:7/0 = 0
11:7/0/custom_data_0 = 1
11:7/0/custom_data_1 = true
12:7/0 = 0
12:7/0/custom_data_0 = 1
12:7/0/custom_data_1 = true
13:7/0 = 0
13:7/0/custom_data_0 = 1
13:7/0/custom_data_1 = true
14:7/0 = 0
14:7/0/custom_data_0 = 1
14:7/0/custom_data_1 = true
16:7/0 = 0
16:7/0/custom_data_0 = 1
16:7/0/custom_data_1 = true
17:7/0 = 0
17:7/0/custom_data_0 = 1
17:7/0/custom_data_1 = true
18:7/0 = 0
18:7/0/custom_data_0 = 1
18:7/0/custom_data_1 = true
19:7/0 = 0
19:7/0/custom_data_0 = 1
19:7/0/custom_data_1 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c5ixy"]
texture = ExtResource("5_j526l")
1:1/0 = 0
1:1/0/custom_data_0 = 2
1:1/0/custom_data_2 = true
2:1/0 = 0
2:1/0/custom_data_0 = 2
2:1/0/custom_data_2 = true
3:1/0 = 0
3:1/0/custom_data_0 = 2
3:1/0/custom_data_2 = true
4:1/0 = 0
4:1/0/custom_data_0 = 2
4:1/0/custom_data_2 = true
5:1/0 = 0
5:1/0/custom_data_0 = 2
5:1/0/custom_data_2 = true
6:1/0 = 0
6:1/0/custom_data_0 = 2
6:1/0/custom_data_2 = true
7:1/0 = 0
7:1/0/custom_data_0 = 2
7:1/0/custom_data_2 = true
8:1/0 = 0
8:1/0/custom_data_0 = 2
8:1/0/custom_data_2 = true
9:1/0 = 0
9:1/0/custom_data_0 = 2
9:1/0/custom_data_2 = true
10:1/0 = 0
10:1/0/custom_data_0 = 2
10:1/0/custom_data_2 = true
11:1/0 = 0
11:1/0/custom_data_0 = 2
11:1/0/custom_data_2 = true
16:1/0 = 0
16:1/0/custom_data_0 = 2
17:1/0 = 0
17:1/0/custom_data_0 = 2
18:1/0 = 0
18:1/0/custom_data_0 = 2
19:1/0 = 0
19:1/0/custom_data_0 = 2
20:1/0 = 0
20:1/0/custom_data_0 = 2
1:2/0 = 0
1:2/0/custom_data_0 = 2
1:2/0/custom_data_2 = true
2:2/0 = 0
2:2/0/custom_data_0 = 2
2:2/0/custom_data_2 = true
3:2/0 = 0
3:2/0/custom_data_0 = 2
3:2/0/custom_data_2 = true
4:2/0 = 0
4:2/0/custom_data_0 = 2
4:2/0/custom_data_2 = true
5:2/0 = 0
5:2/0/custom_data_0 = 2
5:2/0/custom_data_2 = true
6:2/0 = 0
6:2/0/custom_data_0 = 2
6:2/0/custom_data_2 = true
7:2/0 = 0
7:2/0/custom_data_0 = 2
7:2/0/custom_data_2 = true
8:2/0 = 0
8:2/0/custom_data_0 = 2
8:2/0/custom_data_2 = true
9:2/0 = 0
9:2/0/custom_data_0 = 2
9:2/0/custom_data_2 = true
10:2/0 = 0
10:2/0/custom_data_0 = 2
10:2/0/custom_data_2 = true
11:2/0 = 0
11:2/0/custom_data_0 = 2
11:2/0/custom_data_2 = true
16:2/0 = 0
16:2/0/custom_data_0 = 2
17:2/0 = 0
17:2/0/custom_data_0 = 2
18:2/0 = 0
18:2/0/custom_data_0 = 2
19:2/0 = 0
19:2/0/custom_data_0 = 2
20:2/0 = 0
20:2/0/custom_data_0 = 2
1:3/0 = 0
1:3/0/custom_data_0 = 2
1:3/0/custom_data_2 = true
2:3/0 = 0
2:3/0/custom_data_0 = 2
2:3/0/custom_data_2 = true
3:3/0 = 0
3:3/0/custom_data_0 = 2
3:3/0/custom_data_2 = true
4:3/0 = 0
4:3/0/custom_data_0 = 2
4:3/0/custom_data_2 = true
5:3/0 = 0
5:3/0/custom_data_0 = 2
5:3/0/custom_data_2 = true
6:3/0 = 0
6:3/0/custom_data_0 = 2
6:3/0/custom_data_2 = true
7:3/0 = 0
7:3/0/custom_data_0 = 2
7:3/0/custom_data_2 = true
8:3/0 = 0
8:3/0/custom_data_0 = 2
8:3/0/custom_data_2 = true
9:3/0 = 0
9:3/0/custom_data_0 = 2
9:3/0/custom_data_2 = true
10:3/0 = 0
10:3/0/custom_data_0 = 2
10:3/0/custom_data_2 = true
11:3/0 = 0
11:3/0/custom_data_0 = 2
11:3/0/custom_data_2 = true
16:3/0 = 0
16:3/0/custom_data_0 = 2
17:3/0 = 0
17:3/0/custom_data_0 = 2
18:3/0 = 0
18:3/0/custom_data_0 = 2
19:3/0 = 0
19:3/0/custom_data_0 = 2
20:3/0 = 0
20:3/0/custom_data_0 = 2
1:4/0 = 0
1:4/0/custom_data_0 = 2
1:4/0/custom_data_2 = true
2:4/0 = 0
2:4/0/custom_data_0 = 2
2:4/0/custom_data_2 = true
3:4/0 = 0
3:4/0/custom_data_0 = 2
3:4/0/custom_data_2 = true
4:4/0 = 0
4:4/0/custom_data_0 = 2
4:4/0/custom_data_2 = true
5:4/0 = 0
5:4/0/custom_data_0 = 2
5:4/0/custom_data_2 = true
6:4/0 = 0
6:4/0/custom_data_0 = 2
6:4/0/custom_data_2 = true
7:4/0 = 0
7:4/0/custom_data_0 = 2
7:4/0/custom_data_2 = true
8:4/0 = 0
8:4/0/custom_data_0 = 2
8:4/0/custom_data_2 = true
9:4/0 = 0
9:4/0/custom_data_0 = 2
9:4/0/custom_data_2 = true
10:4/0 = 0
10:4/0/custom_data_0 = 2
10:4/0/custom_data_2 = true
11:4/0 = 0
11:4/0/custom_data_0 = 2
11:4/0/custom_data_2 = true
1:5/0 = 0
1:5/0/custom_data_0 = 2
2:5/0 = 0
2:5/0/custom_data_0 = 2
3:5/0 = 0
3:5/0/custom_data_0 = 2
4:5/0 = 0
4:5/0/custom_data_0 = 2
5:5/0 = 0
5:5/0/custom_data_0 = 2
6:5/0 = 0
6:5/0/custom_data_0 = 2
7:5/0 = 0
7:5/0/custom_data_0 = 2
8:5/0 = 0
8:5/0/custom_data_0 = 2
9:5/0 = 0
9:5/0/custom_data_0 = 2
10:5/0 = 0
10:5/0/custom_data_0 = 2
11:5/0 = 0
11:5/0/custom_data_0 = 2
12:5/0 = 0
12:5/0/custom_data_0 = 2
13:5/0 = 0
13:5/0/custom_data_0 = 2
14:5/0 = 0
14:5/0/custom_data_0 = 2
15:5/0 = 0
15:5/0/custom_data_0 = 2
16:5/0 = 0
16:5/0/custom_data_0 = 2
17:5/0 = 0
17:5/0/custom_data_0 = 2
18:5/0 = 0
18:5/0/custom_data_0 = 2
19:5/0 = 0
19:5/0/custom_data_0 = 2
20:5/0 = 0
20:5/0/custom_data_0 = 2
1:6/0 = 0
1:6/0/custom_data_0 = 2
2:6/0 = 0
2:6/0/custom_data_0 = 2
3:6/0 = 0
3:6/0/custom_data_0 = 2
4:6/0 = 0
4:6/0/custom_data_0 = 2
5:6/0 = 0
5:6/0/custom_data_0 = 2
6:6/0 = 0
6:6/0/custom_data_0 = 2
7:6/0 = 0
7:6/0/custom_data_0 = 2
8:6/0 = 0
8:6/0/custom_data_0 = 2
9:6/0 = 0
9:6/0/custom_data_0 = 2
10:6/0 = 0
10:6/0/custom_data_0 = 2
11:6/0 = 0
11:6/0/custom_data_0 = 2
12:6/0 = 0
12:6/0/custom_data_0 = 2
13:6/0 = 0
13:6/0/custom_data_0 = 2
14:6/0 = 0
14:6/0/custom_data_0 = 2
15:6/0 = 0
15:6/0/custom_data_0 = 2
16:6/0 = 0
16:6/0/custom_data_0 = 2
17:6/0 = 0
17:6/0/custom_data_0 = 2
18:6/0 = 0
18:6/0/custom_data_0 = 2
19:6/0 = 0
19:6/0/custom_data_0 = 2
20:6/0 = 0
20:6/0/custom_data_0 = 2
1:7/0 = 0
1:7/0/custom_data_0 = 2
2:7/0 = 0
2:7/0/custom_data_0 = 2
3:7/0 = 0
3:7/0/custom_data_0 = 2
4:7/0 = 0
4:7/0/custom_data_0 = 2
4:7/0/custom_data_1 = true
6:7/0 = 0
6:7/0/custom_data_0 = 2
7:7/0 = 0
7:7/0/custom_data_0 = 2
8:7/0 = 0
8:7/0/custom_data_0 = 2
9:7/0 = 0
9:7/0/custom_data_0 = 2
11:7/0 = 0
11:7/0/custom_data_0 = 2
12:7/0 = 0
12:7/0/custom_data_0 = 2
13:7/0 = 0
13:7/0/custom_data_0 = 2
14:7/0 = 0
14:7/0/custom_data_0 = 2
16:7/0 = 0
16:7/0/custom_data_0 = 2
17:7/0 = 0
17:7/0/custom_data_0 = 2
18:7/0 = 0
18:7/0/custom_data_0 = 2
19:7/0 = 0
19:7/0/custom_data_0 = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y0k75"]
texture = ExtResource("5_3xwv7")
1:1/0 = 0
1:1/0/custom_data_0 = 3
1:1/0/custom_data_2 = true
2:1/0 = 0
2:1/0/custom_data_0 = 3
2:1/0/custom_data_2 = true
3:1/0 = 0
3:1/0/custom_data_0 = 3
3:1/0/custom_data_2 = true
4:1/0 = 0
4:1/0/custom_data_0 = 3
4:1/0/custom_data_2 = true
5:1/0 = 0
5:1/0/custom_data_0 = 3
5:1/0/custom_data_2 = true
6:1/0 = 0
6:1/0/custom_data_0 = 3
6:1/0/custom_data_2 = true
7:1/0 = 0
7:1/0/custom_data_0 = 3
7:1/0/custom_data_2 = true
8:1/0 = 0
8:1/0/custom_data_0 = 3
8:1/0/custom_data_2 = true
9:1/0 = 0
9:1/0/custom_data_0 = 3
9:1/0/custom_data_2 = true
10:1/0 = 0
10:1/0/custom_data_0 = 3
10:1/0/custom_data_2 = true
11:1/0 = 0
11:1/0/custom_data_0 = 3
11:1/0/custom_data_2 = true
12:1/0 = 0
12:1/0/custom_data_0 = 3
12:1/0/custom_data_2 = true
13:1/0 = 0
13:1/0/custom_data_0 = 3
13:1/0/custom_data_2 = true
14:1/0 = 0
14:1/0/custom_data_0 = 3
14:1/0/custom_data_2 = true
15:1/0 = 0
15:1/0/custom_data_0 = 3
15:1/0/custom_data_2 = true
16:1/0 = 0
16:1/0/custom_data_0 = 3
16:1/0/custom_data_2 = true
17:1/0 = 0
17:1/0/custom_data_0 = 3
17:1/0/custom_data_2 = true
18:1/0 = 0
18:1/0/custom_data_0 = 3
18:1/0/custom_data_2 = true
19:1/0 = 0
19:1/0/custom_data_0 = 3
19:1/0/custom_data_2 = true
20:1/0 = 0
20:1/0/custom_data_0 = 3
20:1/0/custom_data_2 = true
1:2/0 = 0
1:2/0/custom_data_0 = 3
1:2/0/custom_data_2 = true
2:2/0 = 0
2:2/0/custom_data_0 = 2
2:2/0/custom_data_2 = true
3:2/0 = 0
3:2/0/custom_data_0 = 3
3:2/0/custom_data_2 = true
4:2/0 = 0
4:2/0/custom_data_0 = 3
4:2/0/custom_data_2 = true
5:2/0 = 0
5:2/0/custom_data_0 = 3
5:2/0/custom_data_2 = true
6:2/0 = 0
6:2/0/custom_data_0 = 3
6:2/0/custom_data_2 = true
7:2/0 = 0
7:2/0/custom_data_0 = 3
7:2/0/custom_data_2 = true
8:2/0 = 0
8:2/0/custom_data_0 = 3
8:2/0/custom_data_2 = true
9:2/0 = 0
9:2/0/custom_data_0 = 3
9:2/0/custom_data_2 = true
10:2/0 = 0
10:2/0/custom_data_0 = 3
10:2/0/custom_data_2 = true
11:2/0 = 0
11:2/0/custom_data_0 = 3
11:2/0/custom_data_2 = true
12:2/0 = 0
12:2/0/custom_data_0 = 3
12:2/0/custom_data_2 = true
13:2/0 = 0
13:2/0/custom_data_0 = 3
13:2/0/custom_data_2 = true
14:2/0 = 0
14:2/0/custom_data_0 = 3
14:2/0/custom_data_2 = true
15:2/0 = 0
15:2/0/custom_data_0 = 3
15:2/0/custom_data_2 = true
16:2/0 = 0
16:2/0/custom_data_0 = 3
16:2/0/custom_data_2 = true
17:2/0 = 0
17:2/0/custom_data_0 = 3
17:2/0/custom_data_2 = true
18:2/0 = 0
18:2/0/custom_data_0 = 3
18:2/0/custom_data_2 = true
19:2/0 = 0
19:2/0/custom_data_0 = 3
19:2/0/custom_data_2 = true
20:2/0 = 0
20:2/0/custom_data_0 = 3
20:2/0/custom_data_2 = true
1:3/0 = 0
1:3/0/custom_data_0 = 3
1:3/0/custom_data_2 = true
2:3/0 = 0
2:3/0/custom_data_0 = 3
2:3/0/custom_data_2 = true
3:3/0 = 0
3:3/0/custom_data_0 = 3
3:3/0/custom_data_2 = true
4:3/0 = 0
4:3/0/custom_data_0 = 3
4:3/0/custom_data_2 = true
6:3/0 = 0
6:3/0/custom_data_0 = 3
6:3/0/custom_data_2 = true
7:3/0 = 0
7:3/0/custom_data_0 = 3
7:3/0/custom_data_2 = true
8:3/0 = 0
8:3/0/custom_data_0 = 3
8:3/0/custom_data_2 = true
9:3/0 = 0
9:3/0/custom_data_0 = 3
9:3/0/custom_data_2 = true
11:3/0 = 0
11:3/0/custom_data_0 = 3
11:3/0/custom_data_2 = true
12:3/0 = 0
12:3/0/custom_data_0 = 3
12:3/0/custom_data_2 = true
13:3/0 = 0
13:3/0/custom_data_0 = 3
13:3/0/custom_data_2 = true
14:3/0 = 0
14:3/0/custom_data_0 = 3
14:3/0/custom_data_2 = true
16:3/0 = 0
16:3/0/custom_data_0 = 3
16:3/0/custom_data_2 = true
17:3/0 = 0
17:3/0/custom_data_0 = 3
17:3/0/custom_data_2 = true
18:3/0 = 0
18:3/0/custom_data_0 = 3
18:3/0/custom_data_2 = true
19:3/0 = 0
19:3/0/custom_data_0 = 3
19:3/0/custom_data_2 = true

[sub_resource type="TileSet" id="TileSet_5wlpx"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 4
custom_data_layer_0/name = "cost"
custom_data_layer_0/type = 2
custom_data_layer_1/name = "water"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "land"
custom_data_layer_2/type = 1
sources/1 = SubResource("TileSetAtlasSource_c5ixy")
sources/0 = SubResource("TileSetAtlasSource_y6kdr")
sources/2 = SubResource("TileSetAtlasSource_y0k75")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qynms"]
texture = ExtResource("10_rst45")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/custom_data_0 = true

[sub_resource type="TileSet" id="TileSet_glbsn"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 4
custom_data_layer_0/name = "block"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_qynms")

[sub_resource type="LabelSettings" id="LabelSettings_h21ic"]
font_size = 8

[node name="Main" type="Node2D"]

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("7_jg22f")
grid = ExtResource("7_gurcu")

[node name="Terrain" type="TileMapLayer" parent="GameBoard"]
tile_map_data = PackedByteArray("AAAFAAUAAAALAAQAAAAGAAUAAAALAAQAAAAHAAUAAAALAAQAAAAIAAUAAAALAAQAAAAJAAUAAAALAAQAAAAKAAUAAAALAAQAAAALAAUAAAALAAQAAAAMAAUAAAALAAQAAAANAAUAAAACAAIAAAAOAAUAAAACAAIAAAAPAAUAAAACAAIAAAAFAAYAAAACAAIAAAAFAAcAAAACAAIAAAAFAAgAAAACAAIAAAAFAAkAAAACAAIAAAAFAAoAAgACAAIAAAAFAAsAAgACAAIAAAAFAAwAAgACAAIAAAAFAA0AAgACAAIAAAAFAA4AAgACAAIAAAAFAA8AAAACAAIAAAAGAA8AAgACAAIAAAAHAA8AAAACAAIAAAAIAA8AAAACAAIAAAAJAA8AAAACAAIAAAAKAA8AAAACAAIAAAALAA8AAAACAAIAAAAMAA8AAAACAAIAAAANAA8AAAACAAIAAAAOAA8AAAACAAIAAAAPAA4AAAACAAIAAAAPAA0AAQACAAYAAAAPAAwAAQACAAYAAAAPAAsAAQACAAYAAAAPAAoAAQACAAYAAAAPAAkAAQACAAYAAAAPAAgAAQACAAYAAAAPAAcAAQACAAYAAAAOAAcAAQACAAYAAAANAAcAAQACAAYAAAAMAAcAAAALAAQAAAAJAAcAAAALAAQAAAAIAAcAAAALAAQAAAAHAAcAAAALAAQAAAAHAAgAAAALAAQAAAAHAAkAAgACAAIAAAAHAAoAAgAEAAMAAAAHAAsAAgACAAIAAAAGAAsAAgACAAIAAAAGAAwAAgAEAAMAAAAGAA0AAgACAAIAAAAHAA0AAgAEAAMAAAAIAA0AAgACAAIAAAAJAA0AAAALAAQAAAAKAA0AAAALAAQAAAAKAAwAAAACAAIAAAAJAAwAAAACAAIAAAAHAAwAAgACAAIAAAAIAAwAAgACAAIAAAAMAAwAAAALAAMAAAAMAAsAAAALAAMAAAAMAAoAAQACAAYAAAAMAAkAAQACAAYAAAAMAAgAAQACAAYAAAALAAgAAQACAAYAAAAKAAgAAAACAAIAAAAJAAgAAAALAAQAAAAIAAgAAAALAAQAAAAIAAkAAAALAAQAAAAIAAoAAgACAAIAAAAJAAoAAAALAAQAAAAJAAkAAAACAAIAAAAKAAkAAAACAAIAAAAKAAoAAAACAAYAAAAJAAsAAAALAAQAAAALAAsAAAACAAYAAAALAAoAAAACAAYAAAALAAkAAQACAAYAAAALAAwAAAACAAYAAAALAA4AAAALAAQAAAAKAA4AAAALAAQAAAAJAA4AAAACAAIAAAAIAA4AAAACAAYAAAAHAA4AAgACAAIAAAAGAA4AAgAEAAMAAAAMAA4AAAALAAQAAAAMAA0AAAALAAMAAAANAA0AAAALAAMAAAANAAwAAQACAAYAAAANAAsAAQACAAYAAAANAAoAAQACAAYAAAANAAkAAQACAAYAAAANAAgAAQACAAYAAAAOAAgAAQACAAYAAAAOAAkAAQACAAYAAAAOAAoAAAALAAMAAAAOAAsAAAALAAMAAAAOAAwAAQACAAYAAAAOAA0AAQACAAYAAAAOAA4AAAALAAQAAAANAA4AAAALAAQAAAAGAAkAAgACAAIAAAAGAAgAAAALAAQAAAAGAAcAAAALAAQAAAAGAAYAAAACAAIAAAAHAAYAAAACAAIAAAAIAAYAAAALAAQAAAAJAAYAAAALAAQAAAAKAAYAAAALAAQAAAALAAYAAAACAAYAAAAMAAYAAAALAAQAAAANAAYAAAALAAQAAAAOAAYAAQACAAYAAAAPAAYAAAACAAIAAAAGAAoAAgAEAAMAAAAFAAQAAAACAAUAAAAGAAQAAAACAAUAAAAHAAQAAAACAAUAAAAIAAQAAAACAAUAAAAJAAQAAAACAAUAAAAKAAQAAAACAAUAAAALAAQAAAACAAUAAAAMAAQAAAACAAUAAAANAAQAAAACAAUAAAAOAAQAAAACAAUAAAAPAAQAAAACAAUAAAAQAAUAAAADAAYAAAAQAAYAAAADAAYAAAAQAAcAAAADAAYAAAAQAAgAAAADAAYAAAAQAAkAAAADAAYAAAAQAAoAAAADAAYAAAAQAAsAAAADAAYAAAAQAAwAAAADAAYAAAAQAA0AAAADAAYAAAAQAA4AAAADAAYAAAAQAA8AAAADAAYAAAAPABAAAAACAAcAAAAOABAAAAACAAcAAAANABAAAAACAAcAAAAMABAAAAACAAcAAAALABAAAAACAAcAAAAKABAAAAACAAcAAAAJABAAAAACAAcAAAAIABAAAAACAAcAAAAHABAAAAACAAcAAAAGABAAAAACAAcAAAAFABAAAAACAAcAAAAEAA4AAAABAAYAAAAEAA8AAAABAAYAAAAEAA0AAAABAAYAAAAEAAwAAAABAAYAAAAEAAsAAAABAAYAAAAEAAoAAAABAAYAAAAEAAkAAAABAAYAAAAEAAgAAAABAAYAAAAEAAcAAAABAAYAAAAEAAYAAAABAAYAAAAEAAUAAAABAAYAAAAEABAAAAABAAcAAAAQABAAAAADAAcAAAAQAAQAAAADAAUAAAAEAAQAAAABAAUAAAATAAAAAAAEAAcAAAASAAAAAAAEAAcAAAARAAAAAAAEAAcAAAAQAAAAAAAEAAcAAAAPAAAAAAAEAAcAAAAOAAAAAAAEAAcAAAANAAAAAAAEAAcAAAAMAAAAAAAEAAcAAAALAAAAAAAEAAcAAAAKAAAAAAAEAAcAAAAJAAAAAAAEAAcAAAAIAAAAAAAEAAcAAAAHAAAAAAAEAAcAAAAGAAAAAAAEAAcAAAAFAAAAAAAEAAcAAAAEAAAAAAAEAAcAAAADAAAAAAAEAAcAAAACAAAAAAAEAAcAAAABAAAAAAAEAAcAAAAAAAAAAAAEAAcAAAAAAAEAAAAEAAcAAAAAAAIAAAAEAAcAAAAAAAMAAAAEAAcAAAAAAAQAAAAEAAcAAAAAAAUAAAAEAAcAAAAAAAYAAAAEAAcAAAAAAAcAAAAEAAcAAAAAAAgAAAAEAAcAAAAAAAkAAAAEAAcAAAAAAAoAAAAEAAcAAAAAAAsAAAAEAAcAAAAAAAwAAAAEAAcAAAAAAA0AAAAEAAcAAAAAAA4AAAAEAAcAAAAAAA8AAAAEAAcAAAAAABAAAAAEAAcAAAAAABEAAAAEAAcAAAAAABIAAAAEAAcAAAAAABMAAAAEAAcAAAACABEAAAAEAAcAAAACABAAAAAEAAcAAAACAA8AAAAEAAcAAAACAA4AAAAEAAcAAAACAA0AAAAEAAcAAAACAAwAAAAEAAcAAAACAAsAAAAEAAcAAAACAAoAAAAEAAcAAAACAAkAAAAEAAcAAAACAAgAAAAEAAcAAAACAAcAAAAEAAcAAAACAAYAAAAEAAcAAAACAAUAAAAEAAcAAAACAAQAAAAEAAcAAAACAAMAAAAEAAcAAAACAAIAAAAEAAcAAAACAAEAAAAEAAcAAAABAAEAAAAEAAcAAAABAAIAAAAEAAcAAAABAAMAAAAEAAcAAAABAAQAAAAEAAcAAAABAAUAAAAEAAcAAAABAAYAAAAEAAcAAAABAAcAAAAEAAcAAAABAAgAAAAEAAcAAAABAAkAAAAEAAcAAAABAAoAAAAEAAcAAAABAAsAAAAEAAcAAAABAAwAAAAEAAcAAAABAA0AAAAEAAcAAAABAA4AAAAEAAcAAAABAA8AAAAEAAcAAAABABAAAAAEAAcAAAABABEAAAAEAAcAAAABABIAAAAEAAcAAAABABMAAAAEAAcAAAACABMAAAAEAAcAAAACABIAAAAEAAcAAAADABIAAAAEAAcAAAADABEAAAAEAAcAAAADABAAAAAEAAcAAAADAA8AAAAEAAcAAAADAA4AAAAEAAcAAAADAA0AAAAEAAcAAAADAAwAAAAEAAcAAAADAAsAAAAEAAcAAAADAAoAAAAEAAcAAAADAAkAAAAEAAcAAAADAAgAAAAEAAcAAAADAAcAAAAEAAcAAAADAAYAAAAEAAcAAAADAAUAAAAEAAcAAAADAAQAAAAEAAcAAAADAAMAAAAEAAcAAAADAAIAAAAEAAcAAAADAAEAAAAEAAcAAAAEAAEAAAAEAAcAAAAEAAIAAAAEAAcAAAAEAAMAAAAEAAcAAAAFAAMAAAAEAAcAAAAFAAIAAAAEAAcAAAAFAAEAAAAEAAcAAAAGAAEAAAAEAAcAAAAGAAIAAAAEAAcAAAAGAAMAAAAEAAcAAAAHAAMAAAAEAAcAAAAHAAIAAAAEAAcAAAAHAAEAAAAEAAcAAAAIAAEAAAAEAAcAAAAIAAIAAAAEAAcAAAAIAAMAAAAEAAcAAAAJAAMAAAAEAAcAAAAJAAIAAAAEAAcAAAAJAAEAAAAEAAcAAAAKAAEAAAAEAAcAAAAKAAIAAAAEAAcAAAAKAAMAAAAEAAcAAAALAAMAAAAEAAcAAAALAAIAAAAEAAcAAAALAAEAAAAEAAcAAAAMAAEAAAAEAAcAAAAMAAIAAAAEAAcAAAAMAAMAAAAEAAcAAAANAAMAAAAEAAcAAAANAAIAAAAEAAcAAAANAAEAAAAEAAcAAAAOAAEAAAAEAAcAAAAOAAIAAAAEAAcAAAAOAAMAAAAEAAcAAAAPAAMAAAAEAAcAAAAPAAIAAAAEAAcAAAAPAAEAAAAEAAcAAAAQAAEAAAAEAAcAAAAQAAIAAAAEAAcAAAAQAAMAAAAEAAcAAAARAAMAAAAEAAcAAAARAAIAAAAEAAcAAAARAAEAAAAEAAcAAAASAAEAAAAEAAcAAAASAAIAAAAEAAcAAAASAAMAAAAEAAcAAAASAAQAAAAEAAcAAAARAAQAAAAEAAcAAAARAAUAAAAEAAcAAAARAAYAAAAEAAcAAAARAAcAAAAEAAcAAAARAAgAAAAEAAcAAAARAAkAAAAEAAcAAAARAAoAAAAEAAcAAAARAAsAAAAEAAcAAAARAAwAAAAEAAcAAAARAA0AAAAEAAcAAAARAA4AAAAEAAcAAAARAA8AAAAEAAcAAAARABAAAAAEAAcAAAARABEAAAAEAAcAAAAQABEAAAAEAAcAAAAPABEAAAAEAAcAAAAOABEAAAAEAAcAAAANABEAAAAEAAcAAAAMABEAAAAEAAcAAAALABEAAAAEAAcAAAAKABEAAAAEAAcAAAAJABEAAAAEAAcAAAAIABEAAAAEAAcAAAAHABEAAAAEAAcAAAAGABEAAAAEAAcAAAAFABEAAAAEAAcAAAAEABEAAAAEAAcAAAAEABIAAAAEAAcAAAAEABMAAAAEAAcAAAADABMAAAAEAAcAAAAFABMAAAAEAAcAAAAFABIAAAAEAAcAAAAGABIAAAAEAAcAAAAGABMAAAAEAAcAAAAHABMAAAAEAAcAAAAHABIAAAAEAAcAAAAIABIAAAAEAAcAAAAIABMAAAAEAAcAAAAJABMAAAAEAAcAAAAJABIAAAAEAAcAAAAKABIAAAAEAAcAAAAKABMAAAAEAAcAAAALABMAAAAEAAcAAAALABIAAAAEAAcAAAAMABIAAAAEAAcAAAAMABMAAAAEAAcAAAANABMAAAAEAAcAAAANABIAAAAEAAcAAAAOABIAAAAEAAcAAAAOABMAAAAEAAcAAAAPABMAAAAEAAcAAAAPABIAAAAEAAcAAAAQABIAAAAEAAcAAAAQABMAAAAEAAcAAAARABMAAAAEAAcAAAARABIAAAAEAAcAAAASABIAAAAEAAcAAAASABEAAAAEAAcAAAASABAAAAAEAAcAAAASAA8AAAAEAAcAAAASAA4AAAAEAAcAAAASAA0AAAAEAAcAAAASAAwAAAAEAAcAAAASAAsAAAAEAAcAAAASAAoAAAAEAAcAAAASAAkAAAAEAAcAAAASAAgAAAAEAAcAAAASAAcAAAAEAAcAAAASAAYAAAAEAAcAAAASAAUAAAAEAAcAAAATAAUAAAAEAAcAAAATAAQAAAAEAAcAAAATAAMAAAAEAAcAAAATAAIAAAAEAAcAAAATAAEAAAAEAAcAAAATAAYAAAAEAAcAAAATAAcAAAAEAAcAAAATAAgAAAAEAAcAAAATAAkAAAAEAAcAAAATAAoAAAAEAAcAAAATAAsAAAAEAAcAAAATAAwAAAAEAAcAAAATAA0AAAAEAAcAAAATAA4AAAAEAAcAAAATAA8AAAAEAAcAAAATABAAAAAEAAcAAAATABEAAAAEAAcAAAATABIAAAAEAAcAAAATABMAAAAEAAcAAAASABMAAAAEAAcAAAAKAAcAAAACAAYAAAALAAcAAQACAAYAAAAKAAsAAAACAAYAAAALAA0AAAACAAIAAAAPAA8AAAACAAIAAAAIAAsAAgACAAIAAAA=")
tile_set = SubResource("TileSet_5wlpx")
script = ExtResource("11_w33xh")
grid = ExtResource("7_gurcu")

[node name="Obstacle" type="TileMapLayer" parent="GameBoard/Terrain"]
tile_set = SubResource("TileSet_glbsn")
script = ExtResource("7_mlpqg")

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource("9_75io2")]

[node name="UnitPath" parent="GameBoard" instance=ExtResource("8_pv6xv")]

[node name="Unit1" parent="GameBoard" instance=ExtResource("12_ddttq")]
position = Vector2(152, 136)
move_range = 8
move_speed = 5
class_type = ExtResource("12_g5gwo")

[node name="Unit2" parent="GameBoard" instance=ExtResource("12_ddttq")]
position = Vector2(168, 200)
move_range = 5
move_speed = 5
class_type = ExtResource("12_g5gwo")

[node name="Enemy1" parent="GameBoard" instance=ExtResource("13_u7hvr")]
position = Vector2(168, 184)
move_range = 4
move_speed = 5
def = 0

[node name="Enemy2" parent="GameBoard" instance=ExtResource("13_u7hvr")]
position = Vector2(152, 200)
move_range = 4
move_speed = 5
def = 0

[node name="Enemy3" parent="GameBoard" instance=ExtResource("13_u7hvr")]
position = Vector2(184, 200)
move_range = 4
move_speed = 5
def = 0

[node name="Enemy4" parent="GameBoard" instance=ExtResource("13_u7hvr")]
position = Vector2(168, 232)
move_range = 4
move_speed = 5
def = 0

[node name="Enemy5" parent="GameBoard" instance=ExtResource("13_u7hvr")]
position = Vector2(152, 248)
move_range = 4
move_speed = 5
def = 0

[node name="Enemy6" parent="GameBoard" instance=ExtResource("13_u7hvr")]
position = Vector2(184, 248)
move_range = 4
move_speed = 5
def = 0

[node name="Cursor" parent="GameBoard" instance=ExtResource("13_wgu0w")]

[node name="Turn" type="Label" parent="GameBoard"]
offset_left = 8.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 24.0
text = "Turn: "
label_settings = SubResource("LabelSettings_h21ic")

[node name="ActionMenu" parent="GameBoard" instance=ExtResource("9_xp7j3")]
offset_left = 261.0
offset_right = 320.0

[node name="VisibleOnScreenEnabler2D2" type="VisibleOnScreenEnabler2D" parent="GameBoard/ActionMenu"]
position = Vector2(29.5, 16)
scale = Vector2(2.85, 1.5)

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_cursor_moved"]
[connection signal="screen_entered" from="GameBoard/ActionMenu/VisibleOnScreenEnabler2D2" to="GameBoard" method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="GameBoard/ActionMenu/VisibleOnScreenEnabler2D2" to="GameBoard" method="_on_visible_on_screen_enabler_2d_screen_exited"]
